manifests/fruit-management-dev/fm-svc-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fruit-management
  name: fruit-management
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fruit-management
    deploymentconfig: fruit-management
  sessionAffinity: None
  type: ClusterIP
