manifests/fruit-management-dev/fm-route-dev.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fruit-management
  name: fruit-management
spec:
  port:
    targetPort: 8080
  subdomain: ""
  to:
    kind: Service
    name: fruit-management
    weight: 100
  wildcardPolicy: None
